--- a/Practica1/estilo.css
+++ b/Practica1/estilo.css
@@ -2,6 +2,7 @@ body {
       font: 400 15px Tahoma,sans-serif; /*Familia sans-serif*/
       line-height: 1.8;
       color: #818181;
+	  background-color: rgba(255,255,255,0.8);
   }
 h1 {
       background-color:#FF5733; 
@@ -9,6 +10,12 @@ h1 {
       text-transform: uppercase;
       padding: 100px 25px;
       text-align: center;     
+  }
+h2{
+    font-weight: bolder;
+    text-decoration: underline;
+    font: 900 Helvetica, serif;
+    color: #000000;
   }
 
 
