--- a/Practica1/estilo.css
+++ b/Practica1/estilo.css
@@ -2,7 +2,7 @@ body {
       font: 400 15px Tahoma,sans-serif; /*Familia sans-serif*/
       line-height: 1.8;
       color: #818181;
-	  background-color: rgba(255,255,255,0.8);
+	  background-color: #f6f6f6;
   }
 h1 {
       background-color:#FF5733; 
@@ -14,8 +14,20 @@ h1 {
 h2{
     font-weight: bolder;
     text-decoration: underline;
-    font: 900 Helvetica, serif;
+    font: 400 15px Tahoma,sans-serif;
     color: #000000;
   }
-
-
+aside{
+    background-color:rgba(255,255,255,0.3);
+    color: #ffffff;
+    padding: 10px 10px 5px 5px;
+  }
+table{
+  border: 4px solid black;
+  align-content:center;
+}
+th{
+  background-color: #555555;
+  color:#ffffff;
+  font-weight: 700;
+}
